[gd_scene load_steps=2 format=3 uid="uid://ecyf5hd6bip2"]

[ext_resource type="Script" path="res://Scripts/onscreen_keyboard.gd" id="1_w61f7"]

[node name="OnscreenKeyboard" type="Camera2D"]
zoom = Vector2(3, 3)
script = ExtResource("1_w61f7")

[node name="Control" type="Control" parent="."]
layout_direction = 1
layout_mode = 3
anchors_preset = 0
offset_left = -192.0
offset_top = -107.0
offset_right = 191.0
offset_bottom = 107.0

[node name="C" type="Button" parent="Control"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.315927
anchor_top = 0.841121
anchor_right = 0.315927
anchor_bottom = 0.841121
offset_right = 19.0
offset_bottom = 31.0
text = "C"
metadata/_edit_use_anchors_ = true

[node name="D" type="Button" parent="Control"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.373368
anchor_top = 0.841121
anchor_right = 0.373368
anchor_bottom = 0.841121
offset_right = 20.0
offset_bottom = 31.0
text = "D"
metadata/_edit_use_anchors_ = true

[node name="E" type="Button" parent="Control"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.43342
anchor_top = 0.841121
anchor_right = 0.43342
anchor_bottom = 0.841121
offset_right = 17.0
offset_bottom = 31.0
text = "E"
metadata/_edit_use_anchors_ = true

[node name="F" type="Button" parent="Control"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.48564
anchor_top = 0.841121
anchor_right = 0.48564
anchor_bottom = 0.841121
offset_right = 17.0
offset_bottom = 31.0
text = "F"
metadata/_edit_use_anchors_ = true

[node name="G" type="Button" parent="Control"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.535248
anchor_top = 0.841121
anchor_right = 0.535248
anchor_bottom = 0.841121
offset_right = 20.0
offset_bottom = 31.0
text = "G"
metadata/_edit_use_anchors_ = true

[node name="A" type="Button" parent="Control"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5953
anchor_top = 0.841121
anchor_right = 0.5953
anchor_bottom = 0.841121
offset_right = 19.0
offset_bottom = 31.0
text = "A"
metadata/_edit_use_anchors_ = true

[node name="B" type="Button" parent="Control"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.655352
anchor_top = 0.841121
anchor_right = 0.655352
anchor_bottom = 0.841121
offset_right = 19.0
offset_bottom = 31.0
text = "B"
metadata/_edit_use_anchors_ = true

[node name="Instruments" type="OptionButton" parent="Control"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00261097
anchor_top = 0.21028
anchor_right = 0.00261097
anchor_bottom = 0.21028
offset_right = 76.0
offset_bottom = 31.0
button_pressed = true
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Piano"
popup/item_1/text = "Violin"
popup/item_1/id = 1
metadata/_edit_use_anchors_ = true

[connection signal="button_down" from="Control/C" to="." method="_on_c_button_down"]
[connection signal="button_down" from="Control/D" to="." method="_on_d_button_down"]
[connection signal="button_down" from="Control/E" to="." method="_on_e_button_down"]
[connection signal="button_down" from="Control/F" to="." method="_on_f_button_down"]
[connection signal="button_down" from="Control/G" to="." method="_on_g_button_down"]
[connection signal="button_down" from="Control/A" to="." method="_on_a_button_down"]
[connection signal="button_down" from="Control/B" to="." method="_on_b_button_down"]
[connection signal="item_selected" from="Control/Instruments" to="." method="_on_option_button_item_selected"]
